# KASCompute-Protocol-V1

./: .gitignore  Cargo.toml  LICENSE-PROTOCOL-V1.txt  README.md
crates/kascompute-service-v1/: Cargo.toml
crates/kascompute-service-v1/dashboard-pro/: index.html
crates/kascompute-service-v1/src/: app.rs  main.rs  state.rs
crates/kascompute-service-v1/src/domain/: models.rs
crates/kascompute-service-v1/src/routes/: mod.rs
crates/kascompute-service-v1/src/routes/legacy/: legacy_handlers.rs  mod.rs
crates/kascompute-service-v1/src/routes/v1/: dags.rs  dashboard.rs  debug_demo.rs  health.rs  jobs.rs  metrics.rs  mining.rs  mod.rs  nodes.rs  proofs.rs  rewards.rs
crates/kascompute-service-v1/src/util/: compute_dag.rs  geo.rs  ip.rs  mod.rs  receipt.rs  resp.rs  time.rs
crates/node-launcher-v1/: Cargo.toml
crates/node-launcher-v1/src/: main.rs
crates/shared-v1/: Cargo.toml
crates/shared-v1/src/: dto.rs
docs/: protocol-v1.1-rewards.md  v1.1-checklist.md
