[package]
name = "kascompute-service-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

shared-v1 = { path = "../shared-v1" }
