[package]
name = "node-launcher-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
